--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "next": "9.5.5",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "react-three-fiber": "^5.0.3",
+    "styled-components": "^5.2.0",
+    "styled-normalize": "^8.0.7",
+    "three": "^0.121.1"
   }
 }
